<resources>
    <string name="app_name">Różańcowy Szlak</string>
    <string name="wprowadzenie_button">WPROWADZENIE</string>
    <string name="modlitwa">Modlitwa</string>
    <string name="rozwa_anie_s_owa">Rozważanie słowa</string>
    <string name="dziesi_tek_r_a_ca">Dziesiątek różańca</string>
    <string name="intencje_modlitwy">Intencje modlitwy</string>
    <string name="akt_strzelisty">Akt strzelisty:</string>
    <string name="bo_e_w_tr_jcy_wi_tej_jedyny_otw_rz_moje_oczy_abym_m_g_wyra_niej_widzie_wielkie_dzie_a_jakich_dokona_e_w_tajemnicy_nawiedzenia_w_el_biety">
        Boże w Trójcy Świętej Jedyny, otwórz moje oczy, abym mógł wyraźniej widzieć wielkie dzieła, jakich dokonałeś w
        tajemnicy Nawiedzenia św. Elżbiety.
    </string>
    <string name="wszechmog_cy_wieczny_bo_e_z_twojego_natchnienia_naj_wi_tsza_maryja_panna_kt_ra_nosi_a_w_onie_twojego_syna_nawiedzi_a_el_biet_spraw_aby_my_byli_pos_uszni_natchnieniom_ducha_wi_tego_i_zawsze_mogli_z_maryj_ciebie_uwielbia_przez_chrystusa_pana_naszego_amen">
        Wszechmogący, wieczny Boże, z Twojego natchnienia Najświętsza Maryja Panna, która nosiła w łonie Twojego Syna,
        nawiedziła Elżbietę, spraw, abyśmy byli posłuszni natchnieniom Ducha Świętego i zawsze mogli z Maryją Ciebie
        uwielbiać. Przez Chrystusa, Pana naszego. Amen.
    </string>
    <string name="pro_ba_o_owoce_rozwa_ania_tajemnicy_naucz_mnie_ojcze_i_z_po_piechem_do_moich_bliskich_przez_wstawiennictwo_maryi_prosz_ci_abym_zawsze_szed_do_nich_z_jezusem_w_sercu_i_wyprasza_im_dar_ducha_wi_tego">
        Prośba o owoce rozważania tajemnicy. Naucz mnie, Ojcze, iść z pośpiechem do moich bliskich. Przez wstawiennictwo
        Maryi proszę Cię, abym zawsze szedł do nich z Jezusem w sercu i wypraszał im dar Ducha Świętego.
    </string>
    <string name="dzie_7_odpowied_el_biety">DZIEŃ 7. Odpowiedź Elżbiety</string>
    <string name="w_kolejnym_dniu_rozwa_ania_tej_tajemnicy_prosz_boga_aby_udzieli_mi_wiat_a_rozumienia_s_w_kt_re_wypowiada_w_el_bieta_nape_niona_duchem_wi_tym">
        W kolejnym dniu rozważania tej tajemnicy proszę Boga, aby udzielił mi światła rozumienia słów, które wypowiada
        św. Elżbieta napełniona Duchem Świętym.
    </string>
    <string name="z_ewangelii_wed_ug_w_ukasza_1_42_43_el_bieta_wyda_a_okrzyk_i_powiedzia_a_b_ogos_awiona_jeste_mi_dzy_niewiastami_i_b_ogos_awiony_jest_owoc_twojego_ona_a_sk_d_e_mi_to_e_matka_mojego_pana_przychodzi_do_mnie">
        Z Ewangelii według św. Łukasza (1,42-43): „Elżbieta wydała okrzyk i powiedziała: «Błogosławiona jesteś między
        niewiastami i błogosławiony jest owoc Twojego łona. A skądże mi to, że Matka mojego Pana przychodzi do mnie?»”
    </string>
    <string name="duch_wi_ty_udzieli_el_biecie_aski_poznania_tajemnicy_maryi_ten_sam_duch_uzdalnia_i_mnie_w_ci_gu_ca_ego_mego_ycia_do_coraz_lepszego_poznawania_niezwyk_ego_bogactwa_duchowego_jakim_b_g_obdarzy_maryj_i_niezwyk_ych_zada_jakie_jej_powierzy_w_dziele_zbawienia_wiata">
        Duch Święty udzielił Elżbiecie łaski poznania tajemnicy Maryi. Ten sam Duch uzdalnia i mnie, w ciągu całego mego
        życia, do coraz lepszego poznawania niezwykłego bogactwa duchowego, jakim Bóg obdarzył Maryję i niezwykłych
        zadań, jakie Jej powierzył w dziele zbawienia świata.
    </string>
    <string name="ucz_si_w_tej_tajemnicy_przyjmowa_maryj_kt_ra_tak_e_do_mnie_przychodzi_przynosi_z_sob_jezusa_kt_ry_nape_nia_mnie_duchem_wi_tym_za_w_janem_paw_em_ii_zwracam_si_do_niej_s_owami_totus_tuus_ca_y_tw_j">
        Uczę się w tej tajemnicy przyjmować Maryję, która także do mnie przychodzi, przynosi z sobą Jezusa, który
        napełnia mnie Duchem Świętym. Za św. Janem Pawłem II zwracam się do Niej słowami: „Totus Tuus – cały Twój”.
    </string>
    <string name="przed_chwa_a_ojcu_zatrzymuj_si_chwil_przed_odm_wieniem_modlitwy_uwielbienia_pragn_aby_jeszcze_bardziej_przenikn_mnie_duch_kt_ry_nape_nia_el_biet_i_uzdolni_j_do_dostrzegania_przez_wiar_tego_czego_oczy_nie_widz_zapatrzony_w_cudowne_dzia_anie_ojca_syna_i_ducha_wi_tego_chc_piewa_wielokrotnie_pochwaln_aklamacj">
        Przed „Chwała Ojcu”: Zatrzymuję się chwilę przed odmówieniem modlitwy uwielbienia. Pragnę, aby jeszcze bardziej
        przeniknął mnie Duch, który napełniał Elżbietę i uzdolnił ją do dostrzegania przez wiarę tego, czego oczy nie
        widzą. Zapatrzony w cudowne działanie Ojca, Syna i Ducha Świętego chcę śpiewać wielokrotnie pochwalną aklamację.
    </string>
    <string name="ojcze_nasz_zdrowa_maryjo_chwa_a_ojcu">Ojcze nasz, Zdrowaś Maryjo, Chwała Ojcu,</string>
    <string name="dzie_14_pie_maryi_jego_imi_jest_wi_te">DZIEŃ 14. Pieśń Maryi - Jego Imię Jest Święte</string>
    <string name="z_ewangelii_wed_ug_w_ukasza_1_46_49_maryja_rzek_a_wielbi_dusza_moja_pana_wi_te_jest_jego_imi">Z
        Ewangelii według św. Łukasza (1,46.49): Maryja rzekła: „Wielbi dusza moja Pana... Święte jest Jego imię”.
    </string>
    <string name="pierwsze_zdania_maryjnego_hymnu_wyra_aj_g_bi_jej_osobistych_prze_y_m_wi_o_rado_ci_i_szcz_ciu_o_uwielbieniu_i_wdzi_czno_ci_wszechmocny_wejrza_na_ni_cho_nale_a_a_do_ubogich_mieszka_c_w_ma_o_znanego_miasteczka_na_kresach_rzymskiego_imperium">
        Pierwsze zdania maryjnego hymnu wyrażają głębię Jej osobistych przeżyć. Mówią o radości i szczęściu, o
        uwielbieniu i wdzięczności. Wszechmocny wejrzał na Nią, choć należała do ubogich mieszkańców mało znanego
        miasteczka na kresach rzymskiego imperium.
    </string>
    <string name="osobiste_do_wiadczenie_mi_o_ci_boga_kt_re_sta_o_si_udzia_em_maryi_pozwala_jej_z_jeszcze_wi_ksz_przenikliwo_ci_kontemplowa_tajemnic_boga_wychwala_wi_c_jego_wielko_i_w_ten_spos_b_tak_e_wyznaje_swoj_wiar_m_wi_o_tym_kim_jest_dla_niej_b_g_i_jak_b_g_dzia_a_w_yciu_ludzi">
        Osobiste doświadczenie miłości Boga, które stało się udziałem Maryi, pozwala Jej z jeszcze większą
        przenikliwością kontemplować tajemnicę Boga. Wychwala więc Jego wielkość i w ten sposób także wyznaje swoją
        wiarę. Mówi o tym, kim jest dla Niej Bóg i jak Bóg działa w życiu ludzi.
    </string>
    <string name="maryja_m_wi_najpierw_o_wi_to_ci_boga_jego_imi_jest_wi_te_jego_tajemnic_jest_wi_to_on_nie_jest_cz_ci_tego_wiata_jest_wi_kszy_od_wszystkiego_i_wszystkich_jest_niesko_czony_doskona_y_wi_kszy_ni_ca_a_stworzona_rzeczywisto">
        Maryja mówi najpierw o świętości Boga: „Jego imię jest święte”. Jego tajemnicą jest Świętość. On nie jest
        częścią tego świata. Jest większy od wszystkiego i wszystkich, jest nieskończony, doskonały, większy niż cała
        stworzona rzeczywistość.
    </string>
    <string name="wiele_lat_p_niej_jezus_b_dzie_uczy_aposto_w_modlitwy_poleci_im_aby_najpierw_m_wili_ojcze_wi_si_imi_twoje_maryja_ju_zna_tak_modlitw_sam_duch_wi_ty_jest_jej_wewn_trznym_nauczycielem">
        Wiele lat później Jezus będzie uczył Apostołów modlitwy. Poleci im, aby najpierw mówili: „Ojcze... święć się
        imię Twoje”. Maryja już zna taką modlitwę. Sam Duch Święty jest Jej wewnętrznym nauczycielem.
    </string>
    <string name="intencje_modlitwy_wyra_one_swoimi_s_owami">Intencje modlitwy wyrażone swoimi słowami.</string>
    <string name="dzie_15_pie_maryi_jego_mi_osierdzie_jest_niesko_czone">DZIEŃ 15. Pieśń Maryi - Jego Miłosierdzie Jest
        Nieskończone
    </string>
    <string name="z_ewangelii_wed_ug_w_ukasza_1_46_50_maryja_rzek_a_wielbi_dusza_moja_pana_jego_mi_osierdzie_z_pokolenia_na_pokolenie_dla_tych_kt_rzy_si_go_boj">
        Z Ewangelii według św. Łukasza (1,46.50): Maryja rzekła: „Wielbi dusza moja Pana... Jego miłosierdzie z
        pokolenia na pokolenie dla tych, którzy się Go boją”.
    </string>
    <string name="pochwa_bo_ego_mi_osierdzia_g_osi_stary_testament_w_pe_ni_objawi_je_jezus_chrystus_przez_dokonane_dzie_o_zbawienia_ko_ci_w_ca_ej_swej_historii_przekazywa_ludziom_to_niezwyk_e_or_dzie_o_mi_osierdziu_i_uczy_postawy_mi_osierdzia_wobec_innych_a_w_naszych_czasach_blask_tej_prawdy_jeszcze_mocniej_zaja_nia_nad_nasz_ziemi">
        Pochwałę Bożego miłosierdzia głosi Stary Testament. W pełni objawił je Jezus Chrystus przez dokonane dzieło
        zbawienia. Kościół w całej swej historii przekazywał ludziom to niezwykłe orędzie o miłosierdziu i uczył postawy
        miłosierdzia wobec innych, a w naszych czasach blask tej prawdy jeszcze mocniej zajaśniał nad naszą ziemią.
    </string>
    <string name="tym_bardziej_chc_si_zatrzyma_nad_s_owami_maryi_i_odkrywa_w_nich_jej_spojrzenie_na_to_misterium_niekt_rzy_komentatorzy_uwa_aj_e_ca_a_dalsza_cz_tej_pie_ni_jest_opowie_ci_o_mi_osiernym_dzia_aniu_boga_chc_te_s_owa_maryi_rozwa_a_w_nast_pnych_dniach_r_a_cowych_medytacji_dzi_zatrzymuj_si_nad_s_owami_w_kt_rych_maryja_wyznaje_e_mi_osierdzie_boga_rozci_ga_si_nad_tymi_kt_rzy_si_go_boj_niech_chodzi_tu_o_strach_i_chowanie_si_przed_gro_nym_s_dzi_lecz_o_boja_bo_o_najwy_szy_szacunek_stworzenia_dla_stw_rcy_o_g_bok_mi_o_dziecka_do_ojca">
        Tym bardziej chcę się zatrzymać nad słowami Maryi i odkrywać w nich Jej spojrzenie na to misterium. Niektórzy
        komentatorzy uważają, że cała dalsza część tej pieśni jest opowieścią o miłosiernym działaniu Boga. Chcę te
        słowa Maryi rozważać w następnych dniach różańcowych medytacji. Dziś zatrzymuję się nad słowami, w których
        Maryja wyznaje, że miłosierdzie Boga rozciąga się „nad tymi, którzy się Go boją”. Niech chodzi tu o strach i
        chowanie się przed groźnym Sędzią, lecz o bojaźń Bożą, o najwyższy szacunek stworzenia dla Stwórcy, o głęboką
        miłość dziecka do Ojca.
    </string>
    <string name="dzie_16_pie_maryi_jego_moc_jest_niezwyci_ona">DZIEŃ 16. Pieśń Maryi - Jego Moc Jest Niezwyciężona
    </string>
    <string name="z_ewangelii_wed_ug_w_ukasza_1_46_51_53_maryja_rzek_a_wielbi_dusza_moja_pana_on_przejawia_moc_ramienia_swego_rozprasza_pyszni_cych_si_zamys_ami_serc_swoich_str_ca_w_adc_w_z_tronu_a_wywy_sza_pokornych_g_odnych_nasyca_dobrami_a_bogatych_z_niczym_odprawia">
        <![CDATA[Z Ewangelii według św. Łukasza (1,46.51-53): Maryja rzekła: „Wielbi dusza moja Pana...  On przejawia moc ramienia swego, rozprasza pyszniących się zamysłami serc swoich. Strąca władców z tronu, a wywyższa pokornych. Głodnych nasyca dobrami, a bogatych z niczym odprawia”.]]></string>
    <string name="w_taki_spos_b_maryja_widzi_dzia_anie_boga_poprzez_takie_czyny_wed_ug_niej_b_g_objawia_moc_swego_ramienia_wcze_niej_okre_li_a_boga_imieniem_wszechmocny_w_czasie_zwiastowania_us_ysza_a_s_owa_dla_boga_nie_ma_nic_niemo_liwego_pozna_a_nowy_jego_czyn_wyra_aj_cy_wszechmoc_pocz_a_z_ducha_wi_tego">
        W taki sposób Maryja widzi działanie Boga. Poprzez takie czyny, według Niej, Bóg „objawia moc swego ramienia”.
        Wcześniej określiła Boga imieniem „Wszechmocny”. W czasie Zwiastowania usłyszała słowa: „dla Boga nie ma nic
        niemożliwego”. Poznała nowy Jego czyn, wyrażający wszechmoc: Poczęła z Ducha Świętego.
    </string>
    <string name="poprzez_takie_m_dro_ciowe_odczytanie_historii_uczy_w_jan_pawe_ii_maryja_pomaga_nam_odkry_zasady_tajemniczego_dzia_ania_bo_ego_b_g_dzia_aj_c_wbrew_logice_tego_wiata_spieszy_na_pomoc_ubogim_i_maluczkim_a_wyst_puje_przeciw_bogatym_i_mo_nym_w_spos_b_zupe_nie_nieoczekiwany_nasyca_dobrami_pokornych_kt_rzy_jemu_zawierzaj_swoje_ycie_audiencja_generalna_6_11_1996_modl_si_aby_maryja_nauczy_a_mnie_tak_widzie_dzia_anie_boga_w_yciu_ludzi">
        „Poprzez takie mądrościowe odczytanie historii – uczy św. Jan Paweł II – Maryja pomaga nam odkryć zasady
        tajemniczego działania Bożego. Bóg, działając wbrew logice tego świata, spieszy na pomoc ubogim i maluczkim, a
        występuje przeciw bogatym i możnym w sposób zupełnie nieoczekiwany, nasyca dobrami pokornych, którzy Jemu
        zawierzają swoje życie” (audiencja generalna, 6.11.1996). Modlę się, aby Maryja nauczyła mnie tak widzieć
        działanie Boga w życiu ludzi.
    </string>
</resources>