<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginEnd="16dp"
tools:context=".NawiedzenieDzien7"
android:id="@+id/linearLayout">
<TextView
        android:text="@string/dzie_7_odpowied_el_biety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView546"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingEnd="10sp"/>

<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView546"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="78dp"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false"
        android:paddingStart="8sp"
        android:paddingTop="10sp"
        android:paddingEnd="5sp"
        android:paddingBottom="5sp">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:text="@string/w_kolejnym_dniu_rozwa_ania_tej_tajemnicy_prosz_boga_aby_udzieli_mi_wiat_a_rozumienia_s_w_kt_re_wypowiada_w_el_bieta_nape_niona_duchem_wi_tym"
                style="@style/paragraf_Text_optimum"
                android:textStyle="italic"
                android:id="@+id/textView547"/>
        <TextView
                android:text="@string/modlitwa"
                android:id="@+id/textView548"
                style="@style/modlitwa"/>
        <TextView
                android:text="@string/wszechmog_cy_wieczny_bo_e_z_twojego_natchnienia_naj_wi_tsza_maryja_panna_kt_ra_nosi_a_w_onie_twojego_syna_nawiedzi_a_el_biet_spraw_aby_my_byli_pos_uszni_natchnieniom_ducha_wi_tego_i_zawsze_mogli_z_maryj_ciebie_uwielbia_przez_chrystusa_pana_naszego_amen"
                android:id="@+id/textView549"
                style="@style/paragraf_Text"/>

        <TextView
                android:text="@string/rozwa_anie_s_owa"
                android:id="@+id/textView550"
                style="@style/rozwazanie_slowa"/>

        <TextView
                android:text="@string/z_ewangelii_wed_ug_w_ukasza_1_42_43_el_bieta_wyda_a_okrzyk_i_powiedzia_a_b_ogos_awiona_jeste_mi_dzy_niewiastami_i_b_ogos_awiony_jest_owoc_twojego_ona_a_sk_d_e_mi_to_e_matka_mojego_pana_przychodzi_do_mnie"
                style="@style/paragraf_Text_optimum"
                android:id="@+id/textView551"/>
        <TextView
                android:text="@string/duch_wi_ty_udzieli_el_biecie_aski_poznania_tajemnicy_maryi_ten_sam_duch_uzdalnia_i_mnie_w_ci_gu_ca_ego_mego_ycia_do_coraz_lepszego_poznawania_niezwyk_ego_bogactwa_duchowego_jakim_b_g_obdarzy_maryj_i_niezwyk_ych_zada_jakie_jej_powierzy_w_dziele_zbawienia_wiata"
                android:id="@+id/textView552"
                style="@style/paragraf_Text_optimum"/>
        <TextView
                android:text="@string/ucz_si_w_tej_tajemnicy_przyjmowa_maryj_kt_ra_tak_e_do_mnie_przychodzi_przynosi_z_sob_jezusa_kt_ry_nape_nia_mnie_duchem_wi_tym_za_w_janem_paw_em_ii_zwracam_si_do_niej_s_owami_totus_tuus_ca_y_tw_j"
                android:id="@+id/textView553"
                style="@style/paragraf_Text_optimum"/>
        <TextView
                android:text="@string/dziesi_tek_r_a_ca"
                android:id="@+id/textView554"
                style="@style/dziesiatek_rozanca"/>

        <TextView
                android:text="@string/przed_chwa_a_ojcu_zatrzymuj_si_chwil_przed_odm_wieniem_modlitwy_uwielbienia_pragn_aby_jeszcze_bardziej_przenikn_mnie_duch_kt_ry_nape_nia_el_biet_i_uzdolni_j_do_dostrzegania_przez_wiar_tego_czego_oczy_nie_widz_zapatrzony_w_cudowne_dzia_anie_ojca_syna_i_ducha_wi_tego_chc_piewa_wielokrotnie_pochwaln_aklamacj"
                style="@style/paragraf_Text_optimum"
                android:id="@+id/textView555"/>
        <TextView
                android:text="@string/akt_strzelisty"
                android:id="@+id/textView556"
                style="@style/intencje_modlitwy"/>
        <TextView
                android:text="@string/bo_e_w_tr_jcy_wi_tej_jedyny_otw_rz_moje_oczy_abym_m_g_wyra_niej_widzie_wielkie_dzie_a_jakich_dokona_e_w_tajemnicy_nawiedzenia_w_el_biety"
                style="@style/paragraf_Text_optimum"
                android:id="@+id/textView557"/>
        <TextView
                android:text="@string/intencje_modlitwy"
                android:id="@+id/textView558"
                style="@style/intencje_modlitwy"/>

        <TextView
                android:text="@string/pro_ba_o_owoce_rozwa_ania_tajemnicy_naucz_mnie_ojcze_i_z_po_piechem_do_moich_bliskich_przez_wstawiennictwo_maryi_prosz_ci_abym_zawsze_szed_do_nich_z_jezusem_w_sercu_i_wyprasza_im_dar_ducha_wi_tego"
                style="@style/paragraf_Text_optimum"
                android:id="@+id/textView559"
                android:textStyle="italic"
                android:paddingBottom="80sp"/>


    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>