<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        tools:context=".NawiedzenieDzien16"
        android:id="@+id/linearLayout">
    <TextView
            android:text="@string/dzie_16_pie_maryi_jego_moc_jest_niezwyci_ona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView688"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingEnd="10sp"
            android:paddingStart="0dp"/>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/textView688"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="78dp"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false"
            android:paddingStart="8sp"
            android:paddingTop="10sp"
            android:paddingEnd="5sp"
            android:paddingBottom="5sp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/modlitwa"
                    android:id="@+id/textView689"
                    style="@style/modlitwa"/>
            <TextView
                    android:text="@string/wszechmog_cy_wieczny_bo_e_z_twojego_natchnienia_naj_wi_tsza_maryja_panna_kt_ra_nosi_a_w_onie_twojego_syna_nawiedzi_a_el_biet_spraw_aby_my_byli_pos_uszni_natchnieniom_ducha_wi_tego_i_zawsze_mogli_z_maryj_ciebie_uwielbia_przez_chrystusa_pana_naszego_amen"
                    android:id="@+id/textView690"
                    style="@style/paragraf_Text"/>

            <TextView
                    android:text="@string/rozwa_anie_s_owa"
                    android:id="@+id/textView691"
                    style="@style/rozwazanie_slowa"/>

            <TextView
                    android:text="@string/z_ewangelii_wed_ug_w_ukasza_1_46_51_53_maryja_rzek_a_wielbi_dusza_moja_pana_on_przejawia_moc_ramienia_swego_rozprasza_pyszni_cych_si_zamys_ami_serc_swoich_str_ca_w_adc_w_z_tronu_a_wywy_sza_pokornych_g_odnych_nasyca_dobrami_a_bogatych_z_niczym_odprawia"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView692"/>
            <TextView
                    android:text="@string/w_taki_spos_b_maryja_widzi_dzia_anie_boga_poprzez_takie_czyny_wed_ug_niej_b_g_objawia_moc_swego_ramienia_wcze_niej_okre_li_a_boga_imieniem_wszechmocny_w_czasie_zwiastowania_us_ysza_a_s_owa_dla_boga_nie_ma_nic_niemo_liwego_pozna_a_nowy_jego_czyn_wyra_aj_cy_wszechmoc_pocz_a_z_ducha_wi_tego"
                    android:id="@+id/textView693"
                    style="@style/paragraf_Text_optimum"/>
            <TextView
                    android:text="@string/poprzez_takie_m_dro_ciowe_odczytanie_historii_uczy_w_jan_pawe_ii_maryja_pomaga_nam_odkry_zasady_tajemniczego_dzia_ania_bo_ego_b_g_dzia_aj_c_wbrew_logice_tego_wiata_spieszy_na_pomoc_ubogim_i_maluczkim_a_wyst_puje_przeciw_bogatym_i_mo_nym_w_spos_b_zupe_nie_nieoczekiwany_nasyca_dobrami_pokornych_kt_rzy_jemu_zawierzaj_swoje_ycie_audiencja_generalna_6_11_1996_modl_si_aby_maryja_nauczy_a_mnie_tak_widzie_dzia_anie_boga_w_yciu_ludzi"
                    android:id="@+id/textView694"
                    style="@style/paragraf_Text_optimum"/>
            <TextView
                    android:text="@string/dziesi_tek_r_a_ca"
                    android:id="@+id/textView695"
                    style="@style/dziesiatek_rozanca"/>

            <TextView
                    android:text="@string/ojcze_nasz_zdrowa_maryjo_chwa_a_ojcu"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView696"/>
            <TextView
                    android:text="@string/akt_strzelisty"
                    android:id="@+id/textView697"
                    style="@style/intencje_modlitwy"/>
            <TextView
                    android:text="@string/bo_e_w_tr_jcy_wi_tej_jedyny_otw_rz_moje_oczy_abym_m_g_wyra_niej_widzie_wielkie_dzie_a_jakich_dokona_e_w_tajemnicy_nawiedzenia_w_el_biety"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView698"/>
            <TextView
                    android:text="@string/intencje_modlitwy"
                    android:id="@+id/textView699"
                    style="@style/intencje_modlitwy"/>

            <TextView
                    android:text="@string/intencje_modlitwy_wyra_one_swoimi_s_owami"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView700"
                    android:textStyle="italic"
                    android:paddingBottom="80sp"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>