<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        tools:context=".NawiedzenieDzien15"
        android:id="@+id/linearLayout">
    <TextView
            android:text="@string/dzie_15_pie_maryi_jego_mi_osierdzie_jest_niesko_czone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView675"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingEnd="10sp"
            android:paddingStart="0dp"/>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/textView675"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="78dp"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false"
            android:paddingStart="8sp"
            android:paddingTop="10sp"
            android:paddingEnd="5sp"
            android:paddingBottom="5sp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/modlitwa"
                    android:id="@+id/textView676"
                    style="@style/modlitwa"/>
            <TextView
                    android:text="@string/wszechmog_cy_wieczny_bo_e_z_twojego_natchnienia_naj_wi_tsza_maryja_panna_kt_ra_nosi_a_w_onie_twojego_syna_nawiedzi_a_el_biet_spraw_aby_my_byli_pos_uszni_natchnieniom_ducha_wi_tego_i_zawsze_mogli_z_maryj_ciebie_uwielbia_przez_chrystusa_pana_naszego_amen"
                    android:id="@+id/textView677"
                    style="@style/paragraf_Text"/>

            <TextView
                    android:text="@string/rozwa_anie_s_owa"
                    android:id="@+id/textView678"
                    style="@style/rozwazanie_slowa"/>

            <TextView
                    android:text="@string/z_ewangelii_wed_ug_w_ukasza_1_46_50_maryja_rzek_a_wielbi_dusza_moja_pana_jego_mi_osierdzie_z_pokolenia_na_pokolenie_dla_tych_kt_rzy_si_go_boj"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView679"/>
            <TextView
                    android:text="@string/pochwa_bo_ego_mi_osierdzia_g_osi_stary_testament_w_pe_ni_objawi_je_jezus_chrystus_przez_dokonane_dzie_o_zbawienia_ko_ci_w_ca_ej_swej_historii_przekazywa_ludziom_to_niezwyk_e_or_dzie_o_mi_osierdziu_i_uczy_postawy_mi_osierdzia_wobec_innych_a_w_naszych_czasach_blask_tej_prawdy_jeszcze_mocniej_zaja_nia_nad_nasz_ziemi"
                    android:id="@+id/textView680"
                    style="@style/paragraf_Text_optimum"/>
            <TextView
                    android:text="@string/tym_bardziej_chc_si_zatrzyma_nad_s_owami_maryi_i_odkrywa_w_nich_jej_spojrzenie_na_to_misterium_niekt_rzy_komentatorzy_uwa_aj_e_ca_a_dalsza_cz_tej_pie_ni_jest_opowie_ci_o_mi_osiernym_dzia_aniu_boga_chc_te_s_owa_maryi_rozwa_a_w_nast_pnych_dniach_r_a_cowych_medytacji_dzi_zatrzymuj_si_nad_s_owami_w_kt_rych_maryja_wyznaje_e_mi_osierdzie_boga_rozci_ga_si_nad_tymi_kt_rzy_si_go_boj_niech_chodzi_tu_o_strach_i_chowanie_si_przed_gro_nym_s_dzi_lecz_o_boja_bo_o_najwy_szy_szacunek_stworzenia_dla_stw_rcy_o_g_bok_mi_o_dziecka_do_ojca"
                    android:id="@+id/textView681"
                    style="@style/paragraf_Text_optimum"/>
            <TextView
                    android:text="@string/dziesi_tek_r_a_ca"
                    android:id="@+id/textView682"
                    style="@style/dziesiatek_rozanca"/>

            <TextView
                    android:text="@string/ojcze_nasz_zdrowa_maryjo_chwa_a_ojcu"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView683"/>
            <TextView
                    android:text="@string/akt_strzelisty"
                    android:id="@+id/textView684"
                    style="@style/intencje_modlitwy"/>
            <TextView
                    android:text="@string/bo_e_w_tr_jcy_wi_tej_jedyny_otw_rz_moje_oczy_abym_m_g_wyra_niej_widzie_wielkie_dzie_a_jakich_dokona_e_w_tajemnicy_nawiedzenia_w_el_biety"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView685"/>
            <TextView
                    android:text="@string/intencje_modlitwy"
                    android:id="@+id/textView686"
                    style="@style/intencje_modlitwy"/>

            <TextView
                    android:text="@string/intencje_modlitwy_wyra_one_swoimi_s_owami"
                    style="@style/paragraf_Text_optimum"
                    android:id="@+id/textView687"
                    android:textStyle="italic"
                    android:paddingBottom="80sp"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>